--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
   .panels {
     min-height: 100vh;
     overflow: hidden;
+    display: flex;
   }
 
   .panel {
@@ -24,7 +25,6 @@ html {
     box-shadow: inset 0 0 0 5px rgba(255,255,255,0.1);
     color: white;
     text-align: center;
-    align-items: center;
     /* Safari transitionend event.propertyName === flex */
     /* Chrome + FF transitionend event.propertyName === flex-grow */
     transition:
@@ -34,6 +34,11 @@ html {
     font-size: 20px;
     background-size: cover;
     background-position: center;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -47,6 +52,10 @@ html {
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .panel p {
