--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ html {
     align-items: center;
   }
 
+  .panel > *:first-child { transform: translateY(-100%); }
+  .panel.open-active > *:first-child { transform: translateY(0); }
+  .panel > *:last-child { transform: translateY(100%); }
+  .panel.open-active > *:last-child { transform: translateY(0); }
+
   .panel p {
     text-transform: uppercase;
     font-family: 'Amatic SC', cursive;
@@ -71,4 +76,5 @@ html {
 
   .panel.open {
     font-size: 40px;
+    flex: 5 ;
   }
